--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ body {
     font-family: Arial, sans-serif;
     justify-content: center;
     align-items: center;
-
+    background-image: url("/img/IMG_5870.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .background-button {
