--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ footer {
     left: -300px; /* Initialement hors de la vue */
     width: 250px;
     height: 100%;
-    background-color: #f9f9f9;
+    background-color: #282729;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
     overflow-y: auto;
     transition: left 0.3s ease; /* Animation pour l'apparition */
@@ -80,16 +80,17 @@ footer {
 /* Liens dans la sidebar */
 .sidebar a {
     display: block;
-    color: #333;
+    color: #5c2699;
     text-decoration: none;
-    padding: 10px 0;
+    padding: 15px 0;
     border-bottom: 1px solid #ddd;
     font-size: 18px;
+    transition: color 0.3s;
 }
 
 .sidebar a:hover {
-    background-color: #7c33d5;
-    color: white;
+    background-color: #555;
+    color: #ab6bf4;
     border-radius: 5px;
 }
 
