--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ footer {
 #menu-btn {
     background-color: #7c33d5;
     color: white;
-    padding-left: 4px;
-    font-size: clamp(20px, 1.1vw, 2px);
+    padding-left: 6px;
+    font-size: clamp(26px, 1.5vw, 2px);
     border: none;
     cursor: pointer;
     position: fixed;
@@ -62,7 +62,7 @@ footer {
     left: 120px;
 }
 
-/* Menu latéral (sidebar) */
+/* Sidebar (menu latéral) */
 .sidebar {
     position: fixed;
     top: 0;
@@ -78,20 +78,31 @@ footer {
 }
 
 /* Liens dans la sidebar */
-.sidebar a {
+.sidebar li a {
     display: block;
     color: #5c2699;
     text-decoration: none;
     padding: 15px 0;
-    border-bottom: 1px solid #ddd;
     font-size: 18px;
-    transition: color 0.3s;
+    transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
-.sidebar a:hover {
+.sidebar li a:hover {
     background-color: #555;
     color: #ab6bf4;
     border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Border-bottom element */
+.border-bottom {
+    width: 100%;
+    height: 1px;
+    background-color: #ddd;
+    position: absolute;
+    bottom: 0; /* Positionné au bas du parent */
+    left: 0;
+    transition: background-color 0.3s ease;
 }
 
 /* Liste de navigation */
