--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@ body {
     font-family: Arial, sans-serif;
     justify-content: center;
     align-items: center;
+    background-image: url('img/freezeclip.gif'); /* Remplace par ton chemin d'image */
+    padding: 0;
+    background-size: 100% auto; /* Ajuste la taille sans déformer */
+    background-position: center; /* Centre l'image */
+    background-repeat: no-repeat; /* Pas de répétition */
+    height: 100vh; /* Hauteur de la fenêtre */
+    width: 100vw; /* Largeur de la fenêtre */
+    image-rendering: optimizeQuality; /* Optimise le rendu */
+    -webkit-backface-visibility: hidden; /* Réduit les artefacts sur certains navigateurs */
+    -webkit-transform: translateZ(0); /* Active le rendu GPU pour lisser */
 }
 
 footer {
@@ -11,6 +21,7 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
 }
+z
 
 .background-button {
     background-color: transparent;
@@ -263,14 +274,14 @@ h1 {
 
 /* Styling for the card */
 .card-video {
-    width: 700px;
+    width: 1000px;
     max-width: 100%;
     margin: 20px auto;
     border-radius: 30px;
     overflow: hidden; 
     box-shadow: 10px 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.7s ease, box-shadow 0.7s ease;
-    background-color: #fff;
+    background-color: rgba(85, 85, 85, 0.3);
 }
 
 /* Add a subtle hover effect */
