--- a/css/nekfeu.css
+++ b/css/nekfeu.css
@@ -3,8 +3,11 @@ body {
     font-family: Arial, sans-serif;
     justify-content: center;
     align-items: center;
-    background-image: url('../img/nekfeu/nekfeu-ia.gif'); /* Remplace par ton chemin d'image */
+    background: url('../img/nekfeu/nekfeu-ia.gif') no-repeat center center fixed;
+    background-size: cover;
+    overflow-x: hidden;
     padding: 0;
+    overflow-y: scroll;
     background-size: 100% auto; /* Ajuste la taille sans déformer */
     background-position: center; /* Centre l'image */
     background-repeat: no-repeat; /* Pas de répétition */
@@ -38,8 +41,66 @@ h1 {
     display: flex;
     justify-content: center;
     color: #5d949a;
+    text-align: center;
+    font-
 }
 
+/* Conteneur du texte */
+.container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.7); /* Fond semi-transparent pour le texte */
+    border-radius: 10px;
+}       
+
+h2 {
+    font-size: 1.5rem;
+    margin-top: 20px;
+    color: #5c2720;
+}
+
+/* Style pour les paragraphes */
+p {
+    font-size: 1rem;
+    font-weight: bold;
+    background: linear-gradient(90deg,         #c8c0c1,
+        #5d949a,
+        #c53763,
+        #615160,
+        #2a535e,    
+        #537489,
+        #263748,
+        #352330,
+        #172a32);
+    -webkit-background-clip: text; /* Clip le dégradé au texte */
+    -webkit-text-fill-color: transparent; /* Remplit le texte de transparence */
+    background-clip: text; /* Pour les navigateurs modernes */
+    text-fill-color: transparent; /* Remplit le texte de transparence */
+}
+
+/* Style pour les listes */
+.container ul {
+    margin: 20px 0;
+    padding-left: 20px;
+    background: linear-gradient(90deg,         #c8c0c1,
+        #5d949a,
+        #c53763,
+        #615160,
+        #2a535e,    
+        #537489,
+        #263748,
+        #352330,
+        #172a32);
+    -webkit-background-clip: text; /* Clip le dégradé au texte */
+    -webkit-text-fill-color: transparent; /* Remplit le texte de transparence */
+    background-clip: text; /* Pour les navigateurs modernes */
+    text-fill-color: transparent; /* Remplit le texte de transparence */
+}
+
+.container li {
+    margin: 5px 0;
+}
 .background-button {
     background-color: transparent;
     border: none;
