--- a/css/nekfeu.css
+++ b/css/nekfeu.css
@@ -42,7 +42,6 @@ h1 {
     justify-content: center;
     color: #5d949a;
     text-align: center;
-    font-
 }
 
 /* Conteneur du texte */
@@ -363,7 +362,7 @@ p {
 /* Title styling */
 .card-title {
     font-size: 1.5em;
-    color: #333;
+    color: #5d949a;
     margin-bottom: 10px;
 }
 
