--- a/css/wallace.css
+++ b/css/wallace.css
@@ -59,7 +59,11 @@ h2 {
 }
 
 h3 {
-    color: #676a66;
+    color: #c1c1cc;
+}
+
+h4 {
+    color: #d8d0c7;
 }
 
 
@@ -68,13 +72,14 @@ p {
     font-size: 1rem;
     font-weight: bold;
     background: linear-gradient(90deg,
-    #683c7d,
-    #ac79c5,
-    #d5a3e7,
-    #eddbf5,
-    #a8bddb,
-    #778cad,
-    #2aaab9
+    #50322c,
+    #984441,
+    #c09994,
+    #d4c1c0,
+    #c1c1cc,
+    #d8d0c7,
+    #c4b3a4,
+    #9e7d69
     );
     -webkit-background-clip: text; /* Clip le dégradé au texte */
     -webkit-text-fill-color: transparent; /* Remplit le texte de transparence */
@@ -87,13 +92,14 @@ p {
     margin: 20px 0;
     padding-left: 20px;
     background: linear-gradient(90deg,
-    #683c7d,
-    #ac79c5,
-    #d5a3e7,
-    #eddbf5,
-    #a8bddb,
-    #778cad,
-    #2aaab9
+    #50322c,
+    #984441,
+    #c09994,
+    #d4c1c0,
+    #c1c1cc,
+    #d8d0c7,
+    #c4b3a4,
+    #9e7d69
     );
     -webkit-background-clip: text; /* Clip le dégradé au texte */
     -webkit-text-fill-color: transparent; /* Remplit le texte de transparence */
@@ -173,20 +179,20 @@ p {
     font-size: clamp(16px, 2vw, 24px);
     padding: 8px 12px;
     border-radius: 10px;
-    color: #1978a2;
+    color: #97acad;
     transition: background 0.7s ease, color 0.7s ease, transform 0.7s ease; /* Transition fluide */
 }
 
 /* Effet de survol */
 .nav-links li a:hover {
     background-color:rgba(85, 85, 85, 0.3);
-    color: #419ea0;
+    color: #758990;
     transform: scale(1.2); /* Applique un léger zoom sans changer la taille de la police */
 }
 
 /* Bouton pour afficher/cacher le menu */
 #menu-btn {
-    background-color: #993227;
+    background-color: #472414;
     color: white;
     padding-left: 10px;
     font-size: clamp(20px, 1.5vw, 2px);
@@ -316,7 +322,7 @@ p {
 /* Liens dans la sidebar */
 .sidebar li a {
     display: block;
-    color: #b48414;
+    color: #d5913f;
     text-decoration: none;
     padding: 15px 0;
     font-size: 18px;
@@ -327,7 +333,7 @@ p {
 
 .sidebar li a:hover {
     background-color: #555;
-    color: #f4d34a;
+    color: #e8bc91;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transform: scale(1);
